--- a/.changes/config.json
+++ b/.changes/config.json
@@ -4,7 +4,7 @@
   "pkgManagers": {
     "javascript": {
       "version": true,
-      "getPublishedVersion": "0.0.0",
+      "getPublishedVersion": "echo '0.0.0'",
       "prepublish": [],
       "publish": [],
       "postpublish": []
