--- a/.github/workflows/covector-version-or-publish.yml
+++ b/.github/workflows/covector-version-or-publish.yml
@@ -26,13 +26,17 @@ jobs:
       - name: covector version or publish (publish when no change files present)
         uses: jbolda/covector/packages/action@covector-v0
         id: covector
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.ORG_NPM_TOKEN }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           command: "publish"
           createRelease: true
 
-      - name: Get result
-        run: >-
-          "{"releaseId": "${{ steps.covector.outputs['-org-dashed-pkg-releaseId'] }}" }"
+      - name: Trigger `@org-dashed/pkg` publishing workflow
+        if: |
+          steps.covector.outputs.successfulPublish == 'true' &&
+          contains(steps.covector.outputs.packagesPublished, '@org-dashed/pkg')
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          event-type: publish-pkg
+          client-payload: >-
+            "{"releaseId": "${{ steps.covector.outputs['-org-dashed-releaseId'] }}" }"
